fix: scrollbars shown

--- a/src/app/index.css
+++ b/src/app/index.css
@@ -277,13 +277,13 @@ table {
 }
 
 /* Chrome, Safari, Edge */
-*::-webkit-scrollbar {
+/* *::-webkit-scrollbar {
   display: none;
-}
+} */
 
 /* Firefox */
-* {
+/* * {
   scrollbar-width: none;
-  -ms-overflow-style: none; /* IE 10+ */
-}
+  -ms-overflow-style: none;
+} */
 
